# FYP_Mahdi

./: CMakeLists.txt  README.md  cuda_test  cuda_test.cu  results_stage111.pkl  results_stage1_trail1.pkl  setup.py
checkpoints1/: checkpoint_episode_450.pth  checkpoint_episode_50.pth  checkpoint_episode_500.pth  metrics_episode_450.json  metrics_episode_50.json  metrics_episode_500.json
checkpointss2/: checkpoint_episode_675.pth  checkpoint_episode_700.pth  checkpoint_episode_75.pth  metrics_episode_675.json  metrics_episode_700.json  metrics_episode_75.json
evaluation_results/: evaluation_model_ep1600_20241107_071043_20241107_110649.json  evaluation_model_ep1600_20241107_071043_20241108_003549.json  evaluation_model_ep700_20241111_014437_20241111_021219.json  evaluation_results.pkl
launch/: evaluate_stage1.launch  evaluate_stage2.launch  train_dqn.launch  train_stage1.launch  train_stage2.launch  train_stage3.launch
models/: model_ep1600_20241107_071043.pth
nodes/: Qplot.py  Stage3_test copy.py  Stage3_test.py  dqn_agent2.py  dynamic_goal_publisher.py  evaluate_stage1.py  obstacle_manager copy.py  obstacle_manager.py  plot_results copy 2.py  plot_results copy.py  plot_results.py  stage1_test.py  stage2_test.py  test_stage2.py  train_stage1.py  train_stage2 copy.py  train_stage2.py  train_stage3 copy.py  train_stage3.py  turtlebot3_env1.py  turtlebot3_env2.py
results111/: training_history_20241104_210432.pkl  training_history_20241104_210744.pkl
test_results/: stage2_results_8.json
worlds/: stage1.world  stage2 copy.world  stage2.world  stage3 copy.world  (+2 more)
(+1065 files in other folders)
